--- a/GuestRegistrationDesktopUI/Views/ShellView.xaml
+++ b/GuestRegistrationDesktopUI/Views/ShellView.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="275,145,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
     </Grid>
 </Window>
