--- a/GuestRegistrationDeskUI/Views/ShellView.xaml
+++ b/GuestRegistrationDeskUI/Views/ShellView.xaml
@@ -1,12 +1,23 @@
 ﻿<Window x:Class="GuestRegistrationDeskUI.Views.ShellView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GuestRegistrationDeskUI.Views"
         mc:Ignorable="d"
-        Title="ShellView" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="ShellView" Height="600" Width="1000">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top" FontSize ="18">
+            <MenuItem Header="_File">
+            </MenuItem>
+            <MenuItem Header="_Account">
+                <MenuItem x:Name="LoginScreen" Header="_Login">
+                </MenuItem>
+            </MenuItem>
+        </Menu>
+        <Grid>
+            <ContentControl x:Name="ActiveItem" Margin="20 5 20 20"/>
+        </Grid>
+    </DockPanel>
 </Window>
+       
