--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -5,8 +5,48 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GuestRegistrationDeskUI.Views"
              mc:Ignorable="d" Background="White" FontSize="18" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="133*" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="400*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" MinHeight="35"/>
+            <RowDefinition Height="auto" MinHeight="35"/>
+            <RowDefinition Height="auto" MinHeight="35"/>
+            <RowDefinition Height="auto" MinHeight="35" />
+            <RowDefinition Height="auto" MinHeight="35"/>
+            <RowDefinition Height="auto" MinHeight="35"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Button Grid.Row="1" Grid.Column="0"
+                HorizontalAlignment="Center" x:Name="ScanIDCard" Padding="20 5" Width="92" Margin="22,10,19,10" Click="ScanIDCard_Click">
+            Scan
+        </Button>
+
+        <Button Grid.Row="2" Grid.Column="0" Padding="20 5" Width="92" Margin="56,10,52,10"
+                HorizontalAlignment="Center" x:Name="RFU1" >
+            Photo
+        </Button>
+
+        <Button Grid.Row="3" Grid.Column="0" Padding="20 5"
+                HorizontalAlignment="Center" x:Name="RFU2" Margin="56,10,52,10" Width="92">
+            Save
+        </Button>
+
+        <Button Grid.Row="4" Grid.Column="0" Padding="20 5"
+                HorizontalAlignment="Center" x:Name="RFU3" Margin="56,10,52,10" Width="92">
+            Print
+        </Button>
+
+        <Button Grid.Row="5" Grid.Column="0" Padding="20 5"
+                HorizontalAlignment="Center" x:Name="RFU4" Margin="56,22,52,10" Width="92">
+            Other
+        </Button>
+
     </Grid>
 </UserControl>
