--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -47,6 +47,7 @@
                 HorizontalAlignment="Center" x:Name="RFU4" Margin="56,22,52,10" Width="92">
             Other
         </Button>
+        <TextBlock x:Name="VisitorDetails" Text="{Binding VisitorDetailsValue, Mode=TwoWay}" Grid.Column="3" HorizontalAlignment="Left" Margin="55,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Height="509" Grid.RowSpan="6" Width="512"/>
 
     </Grid>
 </UserControl>
