--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -7,14 +7,10 @@
              mc:Ignorable="d" Background="White" FontSize="12" 
              d:DesignHeight="1500" d:DesignWidth="2000"
              Height="1000" Width="1700">
-    <Grid Height="1000" Margin="5,0,5,0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="231*"/>
-            <RowDefinition Height="269*"/>
-        </Grid.RowDefinitions>
+    <Grid MinHeight="1000" Margin="5,0,5,0">
 
         <TabControl TabStripPlacement="Left" Margin="0,2,0,8" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" Grid.RowSpan="2" HorizontalAlignment="Right" Width="1700">
-            <TabItem Name="ScanIdDocuments" Header="Scan" Padding="25 10 10 25">
+            <TabItem Name="ScanIdDocuments" Header="Scan" HorizontalContentAlignment="Center" Padding="25 50 50 25">
                 <TabItem.Content>
                     <Grid Margin="0,0,520.4,260.4">
                         <Grid.ColumnDefinitions>
@@ -57,20 +53,61 @@
 
             <TabItem Name="TakeVisitorPhoto" Header="Photo" Grid.Row="1" Grid.Column="2"  Padding="25 50 50 25">
                 <TabItem.Content>
-                    <Button Grid.Row="2" Grid.Column="0" Padding="20 5" Width="92" Height="25" Margin="22,10,19,10"
-                HorizontalAlignment="Center" x:Name="TakePhoto" >
-                        Photo
-                    </Button>
+
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition MinWidth="500"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="350"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Image x:Name="VisitorPhoto" Source="{Binding ImagePath}" Grid.Row="0" Grid.Column="0" Height="400" Width="250" HorizontalAlignment="Left" Margin="50,25,0,0">
+                            
+                        </Image>
+                        
+                        <Button Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Width="150" Height="75" Margin="100,100,19,10"
+                            HorizontalAlignment="Left" x:Name="TakePhoto" >
+                            Take Photo
+                        </Button>
+                    </Grid>
+                    
                 </TabItem.Content>
             </TabItem>
 
             <TabItem Name="GenerateDocuments" Header="Generate Document" Grid.Row="1" Grid.Column="2"  Padding="25 50 50 25">
                 <TabItem.Content>
-                    <Label >Generate Document</Label>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Button Grid.Row="0" Grid.Column="1" Padding="10 5" Width="150" Height="50" Margin="10,0,0,0"
+                                 HorizontalAlignment="Left" x:Name="GenerateVisitor" >
+                            Visitor
+                        </Button>
+                        <Button Grid.Row="0" Grid.Column="1" Padding="10 5" Width="150" Height="50" Margin="40,10,19,10"
+                                 HorizontalAlignment="Center" x:Name="GenerateContract" >
+                            Contract
+                        </Button>
+                        <Button Grid.Row="0" Grid.Column="1" Padding="10 5" Width="170" Height="50" Margin="500,10,19,10"
+                                 HorizontalAlignment="Center" x:Name="GenerateTempBadge" >
+                            Temparary Badge
+                        </Button>
+                        
+                    </Grid>
+
                 </TabItem.Content>
             </TabItem>
 
-            <TabItem Name="PrintingDocument" Header="Print" Grid.Row="1" Grid.Column="2"  Padding="25 50 50 25">
+            <TabItem Name="PrintingDocument" Header="Save" Grid.Row="1" Grid.Column="2" HorizontalContentAlignment="Center" Padding="10 50 50 25">
                 <TabItem.Content>
                     <Label >test</Label>
                 </TabItem.Content>
