--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -64,10 +64,8 @@
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
 
-                        <Image x:Name="VisitorPhoto" Source="{Binding ImagePath}" Grid.Row="0" Grid.Column="0" Height="400" Width="250" HorizontalAlignment="Left" Margin="50,25,0,0">
-                            
-                        </Image>
-                        
+                        <Image x:Name="VisitorPhoto" Source="{Binding ImagePath}" Grid.Row="0" Grid.Column="0" Height="400" Width="250" HorizontalAlignment="Left" Margin="50,25,0,0" MinWidth="250" MinHeight="400"/>
+
                         <Button Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Width="150" Height="75" Margin="100,100,19,10"
                             HorizontalAlignment="Left" x:Name="TakePhoto" >
                             Take Photo
