--- a/GuestRegistrationDeskUI/Views/ShellView.xaml
+++ b/GuestRegistrationDeskUI/Views/ShellView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GuestRegistrationDeskUI.Views"
         mc:Ignorable="d"
-        Title="ShellView" Height="1000" Width="1700">
+        Title="Guest Registration Form" Height="1000" Width="1700">
     <DockPanel>
 
         <Grid>
