--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -88,7 +88,7 @@
                         </Grid.RowDefinitions>
 
                         <Button Grid.Row="0" Grid.Column="1" Padding="10 5" Width="150" Height="50" Margin="10,0,0,0"
-                                 HorizontalAlignment="Left" x:Name="GenerateVisitor" >
+                                 HorizontalAlignment="Left" x:Name="GenerateVisitorDocument" >
                             Visitor
                         </Button>
                         <Button Grid.Row="0" Grid.Column="1" Padding="10 5" Width="150" Height="50" Margin="40,10,19,10"
@@ -99,7 +99,7 @@
                                  HorizontalAlignment="Center" x:Name="GenerateTempBadge" >
                             Temparary Badge
                         </Button>
-                        
+                        <DocumentViewer x:Name="ViewDocument"  Margin="10,34,-750,-900" Grid.Row="1" ScrollViewer.CanContentScroll="True" />
                     </Grid>
 
                 </TabItem.Content>
