--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -77,8 +77,110 @@
                             Take Photo
                         </Button>
                     </Grid>
-                    
+
                 </TabItem.Content>
+            </TabItem>
+
+            <TabItem Name="VisitorDetails" Header="Additional Details" Padding="25 50 50 25" Margin="0 0 0 0" VerticalAlignment="Center">
+
+                <TabControl TabStripPlacement="Top" Margin="0,0,0,0" Padding="0 0 0 0" FontSize="14">
+                    <TabItem Name="VisitorDataSheet" Width="250" Header="Visitor Data Sheet">
+                        <TabItem.Content>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="250" />
+                                    <ColumnDefinition Width="300" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35" />
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35" />
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+
+                                <Label x:Name="lblVisitorsName" Margin="30,0,0,0" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" >Visitor's Name:</Label>
+                                <TextBox x:Name="txtVisitorsName"  Text="{Binding VisitorsName, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                            
+                            </Grid>
+
+                        </TabItem.Content>
+                    </TabItem>
+                    <TabItem Name="ConfidentialityAgreementForVisitor" Width="250" Header="Confidentiality Agreement">
+                        <TabItem.Content>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35" />
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                
+                                
+                            </Grid>
+
+                        </TabItem.Content>
+                    </TabItem>
+                    <TabItem Name="VisitorLogBook" Width="250" Header="Visitor Log Book">
+                        <TabItem.Content>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35" />
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                            </Grid>
+                        </TabItem.Content>
+                    </TabItem>
+
+                    <TabItem Name="HSALog" Width="250" Header="HSA Log">
+                        <TabItem.Content>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35" />
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                            </Grid>
+
+                        </TabItem.Content>
+                    </TabItem>
+
+                </TabControl>
+
             </TabItem>
 
             <TabItem Name="GenerateDocuments" Header="Generate Document" Grid.Row="1" Grid.Column="2"  Padding="25 50 50 25">
@@ -87,7 +189,7 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        
+
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
