--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -22,7 +22,7 @@
                             <RowDefinition Height="auto" MinHeight="35"/>
                             <RowDefinition Height="auto" MinHeight="35"/>
                             <RowDefinition Height="auto" MinHeight="35"/>
-                            <RowDefinition Height="auto" MinHeight="35" />
+                            <RowDefinition Height="auto" MinHeight="35"/>
                             <RowDefinition Height="auto" MinHeight="35"/>
                             <RowDefinition Height="auto" MinHeight="35"/>
                             <RowDefinition/>
@@ -89,7 +89,7 @@
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="250" />
+                                    <ColumnDefinition Width="300" />
                                     <ColumnDefinition Width="300" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
@@ -103,12 +103,37 @@
                                     <RowDefinition Height="auto" MinHeight="35" />
                                     <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
 
                                 <Label x:Name="lblVisitorsName" Margin="30,0,0,0" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" >Visitor's Name:</Label>
-                                <TextBox x:Name="txtVisitorsName"  Text="{Binding VisitorsName, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
-                            
+                                <TextBox x:Name="txtVisitorsName"  Text="{Binding VisitorName, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblDate" Margin="30,0,0,0" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Date</Label>
+                                <TextBox x:Name="txtDate" Text="{Binding Date, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblCompany" Margin="30,0,0,0" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Company</Label>
+                                <TextBox x:Name="txtCompany" Text="{Binding Company, Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblVisitorsIdNo" Margin="30,0,0,0" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visitor's Id No</Label>
+                                <TextBox x:Name="txtVisitorsIdNo" Text="{Binding VisitorIdNo, Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblReasonforVisit" Margin="30,0,0,0" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Reason for the Visit</Label>
+                                <TextBox x:Name="txtReasonforVisit" Text="{Binding ReasonForVisit,Mode=TwoWay}" Grid.Row="5" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblPersontobeVisited" Margin="30,0,0,0" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Person(s) to be Visited</Label>
+                                <TextBox x:Name="txtPersontobeVisited" Text="{Binding PersontobeVisited,Mode=TwoWay}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblAreaVisited" Margin="30,0,0,0" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Area to be Visted</Label>
+                                <TextBox x:Name="txtAreaVisited" Text="{Binding AreaVisited,Mode=TwoWay}" Grid.Row="7" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblVisitDateTime" Margin="30,0,0,0" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visit Date and Time</Label>
+                                <TextBox x:Name="txtVisitDateTime" Text="{Binding VisitDateTime,Mode=TwoWay}" Grid.Row="8" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblVisitDuration" Margin="30,0,0,0" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visit Duration</Label>
+                                <TextBox x:Name="txtVisitDuration" Text="{Binding VisitDuration,Mode=TwoWay}" Grid.Row="9" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblDepartmentManager" Margin="30,0,0,0" Grid.Row="10" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Department Manager</Label>
+                                <TextBox x:Name="txtDepartmentManager" Text="{Binding DepartmentManager,Mode=TwoWay}" Grid.Row="10" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblProductionManager" Margin="30,0,0,0" Grid.Row="11" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Production Manager / Deputy Manager</Label>
+                                <TextBox x:Name="txtProductionManager" Text="{Binding ProductionManager,Mode=TwoWay}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblSecurityController" Margin="30,0,0,0" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Security Controller</Label>
+                                <TextBox x:Name="txtSecurityController" Text="{Binding SecurityController,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+
                             </Grid>
 
                         </TabItem.Content>
@@ -118,8 +143,10 @@
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="250" />
+                                    <ColumnDefinition Width="300" />
+                                    <ColumnDefinition Width="361*"/>
+                                    <ColumnDefinition Width="538*"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" MinHeight="35"/>
@@ -130,8 +157,15 @@
                                     <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
-                                
-                                
+                                <Label x:Name="lblName" Margin="30,11,0,11" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Name</Label>
+                                <TextBox x:Name="txtName" Text="{Binding Name,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>
+                                <Label x:Name="lblTitle" Margin="30,11,0,11" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Title</Label>
+                                <TextBox x:Name="txtTitle" Text="{Binding Title,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>
+                                <Label x:Name="lblCompany1" Margin="30,11,0,11" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Company</Label>
+                                <TextBox x:Name="txtCompany1" Text="{Binding Company,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>
+                                <Label x:Name="lblDate1" Margin="30,11,0,11" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Date</Label>
+                                <TextBox x:Name="txtDate1" Text="{Binding Date,Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>
+
                             </Grid>
 
                         </TabItem.Content>
@@ -141,8 +175,11 @@
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="350" />
+                                    <ColumnDefinition Width="286" />
+                                    <ColumnDefinition Width="14"/>
+                                    <ColumnDefinition Width="276*"/>
+                                    <ColumnDefinition Width="523*"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" MinHeight="35"/>
@@ -151,8 +188,36 @@
                                     <RowDefinition Height="auto" MinHeight="35" />
                                     <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
+
+                                <Label x:Name="lblIdDateOfIssue" Margin="30,11,0,11" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Official ID Document Date of Issue</Label>
+                                <TextBox x:Name="txtIdDateofIssue" Text="{Binding IdDateOfIssue,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblPlaceOfIssue" Margin="30,11,0,11" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Place of Issue</Label>
+                                <TextBox x:Name="txtPlaceofIssue" Text="{Binding PlaceOfIssue,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblVisitorName" Margin="30,11,0,11" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visitor and Company Name</Label>
+                                <TextBox x:Name="txtVisitorName" Text="{Binding VisitorandCompanyName,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblBadgeNo" Margin="30,11,0,11" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visitor's Badge No</Label>
+                                <TextBox x:Name="txtBadgeNo" Text="{Binding VisitorsBadgeNo,Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblPurposeOfVisit" Margin="30,11,0,11" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Purpose of the Visit</Label>
+                                <TextBox x:Name="txtPurposeOfvisit" Text="{Binding PurposeOfVisit,Mode=TwoWay}" Grid.Row="5" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblDate2" Margin="30,11,0,11" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Date</Label>
+                                <TextBox x:Name="txtDate2" Text="{Binding Date,Mode=TwoWay}" Grid.Row="6" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblArrivalTime" Margin="30,11,0,11" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Arrival Time</Label>
+                                <TextBox x:Name="txtArrivalTime" Text="{Binding ArrivalTime,Mode=TwoWay}" Grid.Row="7" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblDepartureTime" Margin="30,11,0,11" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Departure Time</Label>
+                                <TextBox x:Name="txtDepartureTime" Text="{Binding DepartureTime,Mode=TwoWay}" Grid.Row="8" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+                                <Label x:Name="lblEmployeeName" Margin="30,11,0,11" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Employee Name to be Visited</Label>
+                                <TextBox x:Name="txtEmployeeName" Text="{Binding EmployeetobeVisited,Mode=TwoWay}" Grid.Row="9" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
+
+
+
+
                             </Grid>
                         </TabItem.Content>
                     </TabItem>
@@ -162,8 +227,8 @@
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="350" />
+                                    <ColumnDefinition Width="300" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" MinHeight="35"/>
@@ -172,8 +237,28 @@
                                     <RowDefinition Height="auto" MinHeight="35" />
                                     <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+                                    <RowDefinition Height="auto" MinHeight="35"/>
+
+
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
+
+                                <Label x:Name="lblVisitorName1" Margin="30,0,0,0" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visitor's / Company Name</Label>
+                                <TextBox x:Name="txtVisitorName1" Text="{Binding VisitorsAndCompanyName,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblPurposeVisit" Margin="30,0,0,0" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Purpose of the Visit</Label>
+                                <TextBox x:Name="txtPurposeVisit" Text="{Binding PurposeoftheVisit,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblBadgeNo1" Margin="30,0,0,0" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visitor's Badge No</Label>
+                                <TextBox x:Name="txtBadgeNo1" Text="{Binding VisitorsBadgeNo,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblDate3" Margin="30,0,0,0" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Date</Label>
+                                <TextBox x:Name="txtDate3" Text="{Binding Date,Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblArrivalTime1" Margin="30,0,0,0" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Arrival Time</Label>
+                                <TextBox x:Name="txtArrivalTime1" Text="{Binding Date,Mode=TwoWay}" Grid.Row="5" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+                                <Label x:Name="lblDepartureTime1" Margin="30,0,0,0" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">DepartureTime</Label>
+                                <TextBox x:Name="txtDepartureTime1" Text="{Binding Date,Mode=TwoWay}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
+
+
+
                             </Grid>
 
                         </TabItem.Content>
