scan Back Side Updated

--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -51,7 +51,7 @@
                             Scan Front
                         </Button>
                         <Button Grid.Row="6" Grid.Column="1"
-                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDCardBackSide" Padding="0 0" Height="35" Width="125" Margin="278,73,0,0" >
+                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDBackSide" Padding="0 0" Height="35" Width="125" Margin="278,73,0,0" >
                             Scan Back
                         </Button>
                     </Grid>
