--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -13,7 +13,7 @@
         <TabControl TabStripPlacement="Left" Margin="0,10,0,-10" Padding="0 0 0 0" FontSize="18" FontWeight="Bold">
             <TabItem Name="ScanIdDocuments" Header="Scan" HorizontalContentAlignment="Center" Padding="25 50 50 25">
                 <TabItem.Content>
-                    <Grid Margin="0,0,520.4,260.4">
+                    <Grid Margin="0,0,520.4,431">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="auto" />
@@ -58,9 +58,9 @@
                             Scan Back
                         </Button>
 
-                        <Image x:Name="imgIdentityFront" Source="{Binding ImagePathfront}" Grid.Row="8" Grid.Column="0" Width="288" HorizontalAlignment="Left" Margin="12,9,0,215" MinWidth="250" MinHeight="400" Grid.ColumnSpan="2"/>
+                        <Image x:Name="imgIdentityFront" Source="{Binding ImagePathfront}" Grid.Row="8" Grid.Column="0" Width="388" HorizontalAlignment="Left" Margin="12,9,0,269" MinWidth="250"  Grid.ColumnSpan="2"/>
 
-                        <Image x:Name="imgIdentityBack" Source="{Binding ImagePathBack}" Grid.Row="8" Grid.Column="1" Width="306" HorizontalAlignment="Left" Margin="272,11,-60,162" MinWidth="250" MinHeight="400" Grid.ColumnSpan="2"/>
+                        <Image x:Name="imgIdentityBack" Source="{Binding ImagePathBack}" Grid.Row="8" Grid.Column="1" Width="395" HorizontalAlignment="Left" Margin="272,11,-149,269" MinWidth="250"  Grid.ColumnSpan="2"/>
 
 
                     </Grid>
